--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
 html {
     font: sans-serif;
+    color:rgb(49, 124, 223);
+}
+
+body {
+    background-color: rgb(190, 255, 255);
+}
+
+#personal_picture {
+    width: 50px;
+    height: 50px;
 }
