--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 html {
     font: sans-serif;
-    color:rgb(49, 124, 223);
+    color:rgb(0, 68, 255);
 }
 
 body {
@@ -10,4 +10,18 @@ body {
 #personal_picture {
     width: 50px;
     height: 50px;
+}
+
+thead {
+    background-color: aquamarine;
+    padding: 5px;
+}
+
+tbody {
+    background-color: rgb(208, 255, 216);
+    padding: 5px;
+}
+
+td {
+    padding: 5px;
 }
